# mapc-mab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yml
docs/: design.md  mab-diagram.drawio
mapc_mab/: __init__.py  flat_mapc_agent.py  hierarchical_mapc_agent.py  mapc_agent_factory.py
mapc_mab/agents/: __init__.py  flat_mapc_agent.py  hierarchical_mapc_agent.py  mapc_agent.py  mapc_agent_factory.py  offline_wrapper.py  tune_all.sh  tuning.py  utils.py
mapc_mab/agents/tuning/: dashboard.sh  run.py
mapc_mab/envs/: default_config.json  dynamic_scenarios.py  experiments_config.json  mcs_tuning.py  run.py  scenario.py  sim.py  static_scenarios.py
mapc_mab/envs/scenarios/: __init__.py  static.py
mapc_mab/envs/scenarios/tuning/: align_scenarios.sh  simple_scenario_1.py  simple_scenario_2.py  simple_scenario_3.py  simple_scenario_5.py
mapc_mab/envs/tuning/: align_scenarios.sh  simple_scenario_1.py  simple_scenario_2.py  simple_scenario_3.py  simple_scenario_5.py
mapc_mab/plots/: __init__.py  ap_groups_histogram.py  config.py  data_rate_plot.py  data_rate_plot_combined.py  mab_diagram_hot_bars.py  sta_fairness_histogram.py  utils.py
mapc_mab/plots/article/: data_rate_plot_combined.py  mab-diagram.drawio  scenario_5_topology.py
ml4wifi/agents/: __init__.py  mapc_agent.py  mapc_agent_factory.py  thompson_sampling.py
ml4wifi/agents/tuning/: dashboard_docker.sh  run.py
ml4wifi/envs/: debug_config.json  default_config.json  run.py  sim.py  sim_ext.py
ml4wifi/envs/scenarios/: __init__.py  static.py
ml4wifi/envs/scenarios/tuning/: align_scenarios.sh  simple_scenario_1.py  simple_scenario_2.py  simple_scenario_3.py  simple_scenario_5.py
ml4wifi/envs/sim/: __init__.py  sim.py  sim_benchmark.py  sim_ext.py
ml4wifi/params_fit/: align_scenarios.sh  first_scenario_alignment.py  scenario_1_alignment.py  scenario_2_alignment.py  second_scenario_alignment.py
ml4wifi/plots/: __init__.py  actions.ipynb  ap_groups_histogram.py  config.py  data_rate_plot.py  data_rate_plot_combined.py  mab_diagram_hot_bars.py  sta_fairness_histogram.py  thr_plot.py  utils.py
ml4wifi/tuning/: dashboard.sh  dashboard_docker.sh  run.py
test/: __init__.py  test_factory.py
test/agents/: test_factory.py  test_ts.py
test/envs/: test_scenario.py  test_scenario_class.py  test_sim.py
test/envs/scenarios/: test_scenario.py
test/envs/sim/: sim_benchmark.py  test_sim.py
