[project]
name = "mapc_mab"
version = "1.0.0"
description = "IEEE 802.11bn Multi-AP Coordinated Spatial Reuse with Hierarchical Multi-Armed Bandits"

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["802.11", "coordinated spatial reuse", "multi-armed bandits", "machine learning", "reinforcement learning"]

authors = [
  {name = "Maksymilian Wojnar", email = "maksymilian.wojnar@agh.edu.pl"},
  {name = "Wojciech Ciężobka", email = "wojciech.ciezobka@agh.edu.pl"},
  {name = "Katarzyna Kosek-Szott", email = "katarzyna.kosek-szott@agh.edu.pl"},
  {name = "Krzysztof Rusek", email = "krzysztof.rusek@agh.edu.pl"},
  {name = "Szymon Szott", email = "szymon.szott@agh.edu.pl"},
  {name = "David Nunez", email = "david.nunez@upf.edu"},
  {name = "Boris Bellalta", email = "boris.bellalta@upf.edu"}
]

requires-python = ">=3.9"
dependencies = [
  "chex~=0.1.86",
  "jax~=0.4.26",
  "jaxlib~=0.4.26",
  "mapc-sim~=0.1.5",
  "matplotlib~=3.8.4",
  "optuna~=3.5.0",
  "reinforced-lib==1.1.1",
  "tqdm~=4.66.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
