[project]
name = "mapc_mab"
version = "2.0.1"
description = "Coordinated Spatial Reuse Scheduling With Machine Learning in IEEE 802.11 MAPC Networks"

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["802.11", "coordinated spatial reuse", "multi-armed bandits", "machine learning", "reinforcement learning"]

authors = [
  {name = "Maksymilian Wojnar", email = "maksymilian.wojnar@agh.edu.pl"},
  {name = "Wojciech Ciężobka", email = "wojciech.ciezobka@agh.edu.pl"},
  {name = "Artur Tomaszewski", email = "artur.tomaszewski@pg.edu.pl"},
  {name = "Piotr Chołda", email = "piotr.cholda@agh.edu.pl"},
  {name = "Krzysztof Rusek", email = "krzysztof.rusek@agh.edu.pl"},
  {name = "Katarzyna Kosek-Szott", email = "katarzyna.kosek-szott@agh.edu.pl"},
  {name = "Jetmir Haxhibeqiri", email = "Jetmir.Haxhibeqiri@UGent.be"},
  {name = "Jeroen Hoebeke", email = "Jeroen.Hoebeke@UGent.be"},
  {name = "Boris Bellalta", email = "boris.bellalta@upf.edu"},
  {name = "Anatolij Zubow", email = "zubow@tkn.tu-berlin.de"},
  {name = "Falko Dressler", email = "dressler@tkn.tu-berlin.de"},
  {name = "Szymon Szott", email = "szymon.szott@agh.edu.pl"},
]

requires-python = ">=3.12"
dependencies = [
  "reinforced-lib==1.2.2"
]

[tool.setuptools]
packages = ["mapc_mab"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
